Dropdown added below carousel

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -313,6 +313,161 @@
     </div> -->
     <!-- card code ends -->
 
+    <!-- place holder starts here -->
+    <span class="placeholder col-12 bg-danger" id="placeholder">
+      <!-- code of button 1 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button " type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+            Buisness
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 1 on placeholder ends -->
+
+      <!-- code of button 2 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Quizes
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 2 on placeholder ends -->
+
+      <!-- code of button 3 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Culture
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 3 on placeholder ends -->
+
+      <!-- code of button 4 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Arts
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 4 on placeholder ends -->
+
+      <!-- code of button 5 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Hackathon
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 5 on placeholder ends -->
+
+      <!-- code of button 6 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+         Research
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 6 on placeholder ends -->
+
+      <!-- code of button 7 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Article
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 7 on placeholder ends -->
+
+      <!-- code of button 8 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+        Journal
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+      <!-- code of button 8 on placeholder ends -->
+
+      <!-- code of button 9 on place holder starts -->
+      <div class="btn-group">
+        <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          Expert views
+        </button>
+        <ul class="dropdown-menu placeholder_links">
+          <li><a href="">Link 1</a></li>
+          <li><a href="">Link 2</a></li>
+          <li><a href="">Link 3</a></li>
+          <li><a href="">Link 4</a></li>
+        </ul>
+      </div>
+<!-- code of button 9 on placeholder ends -->
+
+<!-- code of button 10 on place holder starts -->
+<div class="btn-group">
+  <button class="btn btn-danger btn-sm dropdown-toggle placeholder_button" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+    Life lesson
+  </button>
+  <ul class="dropdown-menu placeholder_links">
+    <li><a href="">Link 1</a></li>
+    <li><a href="">Link 2</a></li>
+    <li><a href="">Link 3</a></li>
+    <li><a href="">Link 4</a></li>
+  </ul>
+</div>
+<!-- code of button 10 on placeholder ends -->
+    </span>
+
+    <!-- placeholder ends here -->
+
+
+
     <!-- Horizontai card 1st row starts -->
     <div class="row mb-2 my-2">
       <div class="col-md-6">
@@ -327,7 +482,8 @@
               <a href="#" class="btn btn-danger " id="card_btn_Register"><i class="bi bi-boxes"></i> Register</a>
               <a href="#" class="btn btn-danger" id="card_btn_Talkback"><i class="bi bi-soundwave"></i> Talkback</a>
               <a href="https\\:www.google.com" class="btn btn-danger" id="card_btn_bookmark"><i
-                  class="bi bi-bookmark"></i> Bookmark</a></div>
+                  class="bi bi-bookmark"></i> Bookmark</a>
+            </div>
 
             <a href="#" class="stretched-link">Continue reading</a>
           </div>
